# atk

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
example/src/: example_manifest.manifest  example_resource.rc  main.cpp
include/: aapplication.h  agraphics.h  aobject.h  atypes.h  awidget.h  awindow.h  utf8.h
src/: aapplication.cpp  abutton.cpp  agraphics.cpp  aobject.cpp  atypes.cpp  awidget.cpp  awindow.cpp  utf8.cpp
